deploy/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: podinfo
  ports:
    - name: http
      port: 80
      targetPort: 9898
      protocol: TCP
