deploy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: podinfo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-2nc68
        - podSelector: {}
      ports:
        - port: 9898
          protocol: TCP
